--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,8 +255,9 @@ input[type=text], select, textarea {
 }
 
 label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+    margin-right: 1200px;
 }
 
 input[type=submit] {
@@ -267,7 +268,7 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
   float: left;
-  margin-left: 300px;
+  margin-left: 50px;
 }
 
 input[type=submit]:hover {
